# german-oncology-assistant

./: .env.example  .gitignore  README.md  Turing_College_Requirements_Coverage.md  pyproject.toml
config/: download_guidelines.py  sources.json
data/eval/: evaluation-dataset.json  evaluation-dataset.structure.json  guardrail-dataset.json  smoke-dataset.json
docs/: evaluation-dataset.schema.json  guideline-chunk-metadata.schema.json  parsing-and-chunking-strategy.md  project-structure-overview.md  project_concept.md  testing-and-evaluation-strategy.md
evaluations/: run_eval.sh  run_eval_dashboard.sh  utils.py
evaluations/metrics/: advanced.py  behavioral.py  ragas_metrics.py  retrieval.py  similarity.py
evaluations/results/: dataset_check_2026-05-21.json  dataset_check_2026-05-22.json
evaluations/scripts/: check_dataset.py  run_ab_eval.py  run_eval.py
evaluations/ui/: app.py
scripts/: generate_eval_dataset.py  run_app.py  run_indexer.py
src/: citations.py  telemetry.py
src/api/: analytics_service.py  auth.py  conversation_store.py  export_utils.py  main.py  observability.py  rate_limit.config.json  rate_limit.py
src/graph/: checkpointing.py  graph.py  messages.py  permissions.py  state.py
src/indexer/: chunker.py  detector.py  embedder.py  enricher.py  metadata.py  parser.py  pipeline.py  reference.py  store.py
src/prompts/: agent.py  answer.py  rewriter.py  turn_router.py
src/promt/: __init__.py  loader.py
src/retrieval/: bm25.py  expander.py  postprocess.py  reranker.py  search.py
src/tools/: calculate_bmi.py  compare_guidelines.py  drug_class_lookup.py  lookup_empfehlung.py  pubmed_search.py  search_guidelines.py  web_search.py
src/ui/: app.py
tests/: conftest.py
(+65 files in other folders)
