[project]
name = "oncology-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "openai>=1.40.0",
    "pymilvus>=2.4.0",
    "FlagEmbedding>=1.2.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0",
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
